# PrismGate

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Makefile.bak  README.md  README.md.bak  README_NEW.md  REFLECTION_METRICS.md  SECURITY.md  clone_analysis_report.md  commitlint.config.mjs  deny.toml  index.html  llms.txt  mkdocs.yml  release-please-config.json  requirements-docs.txt
.github/scripts/: compare_bench.py  extract_bench.py  profile_bench.sh
.github/workflows/: ci.yml  commitlint.yml  container.yml  docs.yml  release-please.yml  release.yml  security.yml
BRAND_CONCEPT/: index.html
MARKETING_BRIEF/: index.html
MCP_GATEWAY_STANDARDS/: index.html
SECURITY_AUDIT/: index.html
architecture/: index.html
backend-management/: index.html
benches/: concurrent_calls.rs  lib.rs  multi_backend_load.rs  registry_search.rs
benchmarks/search-quality/: index.html
benchmarks/token-savings/: index.html
codebase-map/: index.html
config/: example-minimal.yaml  example.yaml  starter.yaml
diagrams/: backend-lifecycle.d2  discovery-flow.d2  health-checker.d2  ipc-architecture.d2  pool-lifecycle.d2  proxy-startup.d2  token-comparison.d2
docs/: BRAND_CONCEPT.md  MARKETING_BRIEF.md  MCP_GATEWAY_STANDARDS.md  README.md  SECURITY_AUDIT.md  architecture.md  backend-management.md  codebase-map.md  resources-and-prompts.md  sandbox.md  secrets-and-config.md  telemetry-strategy.md  token-efficiency.md  tool-discovery.md
docs/benchmarks/: cpu-profiling.md  search-quality.md  token-savings.md
docs/diagrams/: architecture.d2  daemon-lifecycle.d2  discovery-flow.d2  ipc-architecture.d2  proxy-startup.d2  sandbox-execution.d2  token-comparison.d2  tool-discovery.d2
docs/plans/: 2026-02-14-progressive-disclosure.md
docs/references/: competing-gateways.md  integration-guides.md  mcp-best-practices.md
docs/stylesheets/: extra.css
resources-and-prompts/: index.html
sandbox/: index.html
search/: search_index.json
secrets-and-config/: index.html
src/: admin.rs  cache.rs  chaos_tests.rs  cli.rs  config.rs  edge_case_tests.rs  embeddings.rs  integration_inventory.rs  lib.rs  load_testing.rs  main.rs  mcp_compliance_tests.rs  prompts.rs  rbac.rs  registry.rs  resources.rs  server.rs  testutil.rs  tracker.rs
telemetry-strategy/: index.html
tests/: mcp_client_test.sh
token-efficiency/: index.html
tool-discovery/: index.html
web/: dashboard.html  index.html  package-lock.json  package.json  vite.config.ts
(+55 files in other folders)
